--- a/BTS.html
+++ b/BTS.html
@@ -18,24 +18,99 @@
         <h1>Welcome, Is this your first time seeing BTS?</h1>
     </section>     
     <article> 
-        <h2>HOW THEY STARTED</h2>
+        <h1>HOW THEY STARTED</h1>
         <p>BTS(Hangul: 방탄소년단; RR: Bangtan Sonyeondan), also known as the Bangtan Boys, is a seven-member South Korean boy band formed in Seoul in 2013. The name became a backronym for Beyond the Scene in July 2017. The septet co-writes and produces much of their output. Initially rooted in hip hop, BTS' musical style has evolved to include a wide range of genres. Their lyrics, often focused on personal and social commentary, touch on the themes of mental health, troubles of school-age youth, loss, the journey towards loving oneself, and individualism. Their work features references to literature and psychological concepts and includes an alternative universe storyline. Popular for their live performances, the group has staged several world tours. </p>
         <p>The group initially formed as teenagers under Big Hit Entertainment and released their debut single album, 2 Cool 4 Skool (2013). Subsequent work such as their first U.S. Billboard 200 entries The Most Beautiful Moment in Life, Part 2 (2015), The Most Beautiful Moment in Life: Young Forever (2016), and Wings (2016) helped establish BTS' reputation as a socially conscious group. Wings became BTS' first album to sell one million copies in South Korea. By 2017, BTS crossed into the international music market, leading the Korean Wave into the United States and breaking numerous sales records, becoming the first Korean group to receive a certification by the Recording Industry Association of America (RIAA) with their single "Mic Drop." The band is the first and only Korean act as of 2019 to top the U.S. Billboard 200 with their studio album Love Yourself: Tear (2018) and have since hit the top of the U.S. charts with their albums Love Yourself: Answer (2018) and Map of the Soul: Persona (2019), making BTS the first group since The Beatles to earn three number one albums in less than a year. Love Yourself: Answer also broke South Korea's Gaon Album Chart's all-time monthly record previously set by Love Yourself: Tear and became the first Korean album certified Gold in the United States.</p>
         <p>In 2018, BTS had the second and third best-selling albums worldwide and were the second best-selling artists worldwide. In 2019, Map of the Soul: Persona became the best-selling album in Korean history, and BTS became the best-selling artist in South Korea of all time, having sold over fourteen million albums. The group won Top Social Artist three years in a row and Top Duo/Group at the 26th Billboard Music Awards. Time magazine has named the band one of the 25 most influential people on the internet, featured them on their international cover as "Next Generation Leaders," and named them one of Time 100's most influential people of 2019. Forbes Korea Power Celebrity has named BTS the most influential celebrities of Korea in 2018. BTS are worth more than $4.65 billion to South Korea's economy each year, attracting one in every 13 foreign tourists that visit the country, and are cited as one of the key acts boosting global music sales to $19 billion in 2018, a figure not seen since 2006 after digital purchases gained momentum.</p>
         <p>Following their philanthropic efforts in their Love Myself anti-violence campaign in partnership with UNICEF, BTS addressed the United Nations 73rd General Assembly and became the youngest ever recipients of the Order of Cultural Merit from the President of South Korea due to their contributions in spreading Korean culture and language.</p>
     </article>
     <article>
-        <ul>Kim Namjoon</ul> <img src="BTSImages/RM_Portal.svg"></a>
-        <ul>Kim Seokjin</ul> <a href="BTSImages/Jin_Portal.svg"></a>
-        <ul>Min Yoongi</ul> <a href="BTSImages/Suga_Portal.svg"></a>
-        <ul>Jung Hoseok</ul> <a href="BTSImages/J-Hope_Portal.svg"></a>
-        <ul>Park Jimin</ul> <a href="BTSImages/Jimin_Portal.svg"></a>
-        <ul>Kim Taehyung</ul> <a href="BTSImages/V_Portal.svg"></a>
-        <ul>Jeon Jungkook(Jeongkook)</ul> <a href="BTSImages/Jungkook_Portal.svg"></a>
+        <ul>Kim Namjoon</ul> <img src="BTSImages/RM.jpg"></a>
+        <ul>Kim Seokjin</ul> <img src="BTSImages/Jin.png"></a>
+        <ul>Min Yoongi</ul> <img src="BTSImages/Suga.jpg"></a>
+        <ul>Jung Hoseok</ul> <img src="BTSImages/J-Hope.png"></a>
+        <ul>Park Jimin</ul> <img src="BTSImages/Jimin.png"></a>
+        <ul>Kim Taehyung</ul> <img src="BTSImages/V.jpg"></a>
+        <ul>Jeon Jungkook</ul> <img src="BTSImages/Jungkook.jpg"></a>
     </article>
-
+    <article>
+        <h2>DISCOGRAPHY</h2>
+         <h2>BUTTER</h2>
+         <p>Released May 5, 2021</p>
+         <h2>Track list:</h2>
+          <ol>Butter</ol>
+          <ol>Butter(Hotter Remix)</ol>
+          <ol>Butter(Instrumental)</ol>  
+    </article>
+    <article>
+        <h2>PERMISSION TO DANCE</h2>
+        <ol>Butter</ol>
+        <ol>Permission to Dance</ol>
+        <ol>Butter(Instrumental)</ol>
+        <ol>Permission to Dance(Instrumental)</ol>
+    </article>
+    <article>
+        <h2>PROOF</h2>           
+        <h3>Disc 1</h3>             
+        <ol>Born Singer</ol>
+        <ol>No More Dream</ol>
+        <ol>N.O</ol>
+        <ol>Boy in Luv</ol>
+        <ol>Danger</ol>
+        <ol>I NEED U</ol>
+        <ol>Run</ol>
+        <ol>Fire</ol>
+        <ol>Blood,Sweat,Tears</ol>
+        <ol>Spring Day</ol>
+        <ol>DNA</ol>
+        <ol>Fake Love</ol>
+        <ol>IDOL</ol>
+        <ol>Boy With Luv</ol>
+        <ol>ON</ol>
+        <ol>Dynamite</ol>
+        <ol>Life Goes On</ol>
+        <ol>Butter</ol>
+        <ol>Yet to Come</ol>
+    </article>
+    <article>
+        <h3>Disc Two</h3>
+        <ol>RUN BTS</ol>
+        <ol>Intro:Persona</ol>
+        <ol>Stay</ol>
+        <ol>Moon</ol>
+        <ol>Jamais Vu</ol>
+        <ol>Trivia 轉: Seesaw"</ol>
+        <ol>BTS Cypher Pt 3:Killer</ol>
+        <ol>Outro: Ego</ol>
+        <ol>Her</ol>
+        <ol>Filter</ol>
+        <ol>Friends</ol>
+        <ol>Singularity</ol>
+        <ol>00:00 (Zero O'Clock)</ol>
+        <ol>Euphoria</ol>
+        <ol>Dimple</ol>
+    </article>
+    <article>
+        <h3>Disc Three</h3>
+        <ol>Jump (Demo version)</ol>
+        <ol>Young Love</ol>
+        <ol>Boy in Luv</ol>
+        <ol>Quotation Mark</ol>
+        <ol>I NEED U(demo version)</ol>
+        <ol>BOYZ with FUN(demo version)</ol>
+        <ol>Tony Montana(AgustD with Jimin)</ol>
+        <ol>Young Forever(RM demo version)</ol>
+        <ol>Spring Day(V demo version)</ol>
+        <ol>DNA(J-hope Demo version)</ol>
+        <ol>Epiphany(Jin Demo version)</ol>
+        <ol>Seesaw(demo version)</ol>
+        <ol>Still with you (Jungkook acapella)</ol>
+        <ol>For Youth</ol>
+    </article>
 </body>
- <article>
-    <img id="  
-    </body>
+<!-- Copyright -->
+Copyright (c)
+<ul>Wikipedia (2022) Butter (album) Available at:"https://en.wikipedia.org/wiki/Butter_(song)"[Accessed 26th Aug 2022]</ul>
+<ul>Wikipedia (2022) Permission to Dance (album) Available at:"https://en.wikipedia.org/wiki/Permission_to_Dance" [Accessed 26th August 2022]</ul>
+<ul>Wikipedia (2022) Proof (album) Available at: "https://en.wikipedia.org/wiki/Proof_%28album%29" [Accessed 26th August 2022]</ul>
 </html>
