HTML is completed and Styling in progress

--- a/BTS.html
+++ b/BTS.html
@@ -9,14 +9,22 @@
     <link rel="icon" href="BTSImages/favicon.ico">
 </head>
 <!-- Start Header -->
-<section id="hero">
-    <img src="BTSImages/BTS-Festa.jpg" alt="Festa">
-</section>
+<header>
+        <!--Navigation Start-->
+            <nav>
+                <a href="">HOME</a>
+                <a href="">BIOGRAPHY</a>
+                <a href="">DISCOGRAPHY</a>
+            </nav>        
+    </header>
 <!-- Main -->
-<body> 
-    <section>
-        <h1>Welcome, Is this your first time seeing BTS?</h1>
-    </section>     
+<body>
+    <!-- TITLE -->
+    <section id="title">
+        <h1>WELCOME, IS THIS YOUR FIRST TIME SEEING BTS?</h1>
+    </section>
+    <!-- Articles -->
+    <section id="main">   
     <article> 
         <h1>HOW THEY STARTED</h1>
         <p>BTS(Hangul: 방탄소년단; RR: Bangtan Sonyeondan), also known as the Bangtan Boys, is a seven-member South Korean boy band formed in Seoul in 2013. The name became a backronym for Beyond the Scene in July 2017. The septet co-writes and produces much of their output. Initially rooted in hip hop, BTS' musical style has evolved to include a wide range of genres. Their lyrics, often focused on personal and social commentary, touch on the themes of mental health, troubles of school-age youth, loss, the journey towards loving oneself, and individualism. Their work features references to literature and psychological concepts and includes an alternative universe storyline. Popular for their live performances, the group has staged several world tours. </p>
@@ -107,10 +115,14 @@
         <ol>Still with you (Jungkook acapella)</ol>
         <ol>For Youth</ol>
     </article>
+
+    <a href="" class="button btn-teal">Back To Top</a> 
 </body>
+<br>
 <!-- Copyright -->
-Copyright (c)
+<section id="Copyright">
 <ul>Wikipedia (2022) Butter (album) Available at:"https://en.wikipedia.org/wiki/Butter_(song)"[Accessed 26th Aug 2022]</ul>
 <ul>Wikipedia (2022) Permission to Dance (album) Available at:"https://en.wikipedia.org/wiki/Permission_to_Dance" [Accessed 26th August 2022]</ul>
 <ul>Wikipedia (2022) Proof (album) Available at: "https://en.wikipedia.org/wiki/Proof_%28album%29" [Accessed 26th August 2022]</ul>
+</section>
 </html>
