--- a/BTS.html
+++ b/BTS.html
@@ -23,8 +23,8 @@
     <section id="title">
         <h1>WELCOME, IS THIS YOUR FIRST TIME SEEING BTS?</h1>
     </section>
-    <!-- Articles -->
-    <section id="main">   
+    <!-- Intro-->
+    <section id="Intro">   
     <article> 
         <h1>HOW THEY STARTED</h1>
         <p>BTS(Hangul: 방탄소년단; RR: Bangtan Sonyeondan), also known as the Bangtan Boys, is a seven-member South Korean boy band formed in Seoul in 2013. The name became a backronym for Beyond the Scene in July 2017. The septet co-writes and produces much of their output. Initially rooted in hip hop, BTS' musical style has evolved to include a wide range of genres. Their lyrics, often focused on personal and social commentary, touch on the themes of mental health, troubles of school-age youth, loss, the journey towards loving oneself, and individualism. Their work features references to literature and psychological concepts and includes an alternative universe storyline. Popular for their live performances, the group has staged several world tours. </p>
@@ -32,32 +32,37 @@
         <p>In 2018, BTS had the second and third best-selling albums worldwide and were the second best-selling artists worldwide. In 2019, Map of the Soul: Persona became the best-selling album in Korean history, and BTS became the best-selling artist in South Korea of all time, having sold over fourteen million albums. The group won Top Social Artist three years in a row and Top Duo/Group at the 26th Billboard Music Awards. Time magazine has named the band one of the 25 most influential people on the internet, featured them on their international cover as "Next Generation Leaders," and named them one of Time 100's most influential people of 2019. Forbes Korea Power Celebrity has named BTS the most influential celebrities of Korea in 2018. BTS are worth more than $4.65 billion to South Korea's economy each year, attracting one in every 13 foreign tourists that visit the country, and are cited as one of the key acts boosting global music sales to $19 billion in 2018, a figure not seen since 2006 after digital purchases gained momentum.</p>
         <p>Following their philanthropic efforts in their Love Myself anti-violence campaign in partnership with UNICEF, BTS addressed the United Nations 73rd General Assembly and became the youngest ever recipients of the Order of Cultural Merit from the President of South Korea due to their contributions in spreading Korean culture and language.</p>
     </article>
+    </section>
     <article>
-        <ul>Kim Namjoon</ul> <img src="BTSImages/RM.jpg"></a>
-        <ul>Kim Seokjin</ul> <img src="BTSImages/Jin.png"></a>
-        <ul>Min Yoongi</ul> <img src="BTSImages/Suga.jpg"></a>
-        <ul>Jung Hoseok</ul> <img src="BTSImages/J-Hope.png"></a>
-        <ul>Park Jimin</ul> <img src="BTSImages/Jimin.png"></a>
-        <ul>Kim Taehyung</ul> <img src="BTSImages/V.jpg"></a>
-        <ul>Jeon Jungkook</ul> <img src="BTSImages/Jungkook.jpg"></a>
-    </article>
-    <article>
+<!-- BIOGRAPHY -->
+<section id="members">
+        <img src="BTSImages/RM.jpg"></a>
+        <img src="BTSImages/Jin.png"></a>
+        <img src="BTSImages/Suga.jpg"></a>
+        <img src="BTSImages/J-Hope.png"></a>
+        <img src="BTSImages/Jimin.png"></a>
+        <img src="BTSImages/V.jpg"></a>
+        <img src="BTSImages/Jungkook.jpg"></a>
+    </section>
+    <section id="Intro">
         <h2>DISCOGRAPHY</h2>
+    </section>
+    <section id="Album 1">
          <h2>BUTTER</h2>
          <p>Released May 5, 2021</p>
          <h2>Track list:</h2>
           <ol>Butter</ol>
           <ol>Butter(Hotter Remix)</ol>
           <ol>Butter(Instrumental)</ol>  
-    </article>
-    <article>
+    </section>
+    <section id="Album 2">
         <h2>PERMISSION TO DANCE</h2>
         <ol>Butter</ol>
         <ol>Permission to Dance</ol>
         <ol>Butter(Instrumental)</ol>
         <ol>Permission to Dance(Instrumental)</ol>
-    </article>
-    <article>
+    </section>
+    <section id="Album 3">
         <h2>PROOF</h2>           
         <h3>Disc 1</h3>             
         <ol>Born Singer</ol>
@@ -79,8 +84,7 @@
         <ol>Life Goes On</ol>
         <ol>Butter</ol>
         <ol>Yet to Come</ol>
-    </article>
-    <article>
+        <br>
         <h3>Disc Two</h3>
         <ol>RUN BTS</ol>
         <ol>Intro:Persona</ol>
@@ -97,8 +101,7 @@
         <ol>00:00 (Zero O'Clock)</ol>
         <ol>Euphoria</ol>
         <ol>Dimple</ol>
-    </article>
-    <article>
+        <br>
         <h3>Disc Three</h3>
         <ol>Jump (Demo version)</ol>
         <ol>Young Love</ol>
@@ -114,15 +117,13 @@
         <ol>Seesaw(demo version)</ol>
         <ol>Still with you (Jungkook acapella)</ol>
         <ol>For Youth</ol>
-    </article>
-
-    <a href="" class="button btn-teal">Back To Top</a> 
+        </section>      
 </body>
-<br>
+<a href="" class="button btn-purple">Back To Top</a> 
 <!-- Copyright -->
 <section id="Copyright">
-<ul>Wikipedia (2022) Butter (album) Available at:"https://en.wikipedia.org/wiki/Butter_(song)"[Accessed 26th Aug 2022]</ul>
-<ul>Wikipedia (2022) Permission to Dance (album) Available at:"https://en.wikipedia.org/wiki/Permission_to_Dance" [Accessed 26th August 2022]</ul>
-<ul>Wikipedia (2022) Proof (album) Available at: "https://en.wikipedia.org/wiki/Proof_%28album%29" [Accessed 26th August 2022]</ul>
+<li>Wikipedia (2022) Butter (album) Available at:"https://en.wikipedia.org/wiki/Butter_(song)"[Accessed 26th Aug 2022]</ul>
+<li>Wikipedia (2022) Permission to Dance (album) Available at:"https://en.wikipedia.org/wiki/Permission_to_Dance" [Accessed 26th August 2022]</ul>
+<li>Wikipedia (2022) Proof (album) Available at: "https://en.wikipedia.org/wiki/Proof_%28album%29" [Accessed 26th August 2022]</ul>
 </section>
 </html>
