Updated all members and layouts

--- a/BTS.html
+++ b/BTS.html
@@ -32,38 +32,58 @@
         <p>In 2018, BTS had the second and third best-selling albums worldwide and were the second best-selling artists worldwide. In 2019, Map of the Soul: Persona became the best-selling album in Korean history, and BTS became the best-selling artist in South Korea of all time, having sold over fourteen million albums. The group won Top Social Artist three years in a row and Top Duo/Group at the 26th Billboard Music Awards. Time magazine has named the band one of the 25 most influential people on the internet, featured them on their international cover as "Next Generation Leaders," and named them one of Time 100's most influential people of 2019. Forbes Korea Power Celebrity has named BTS the most influential celebrities of Korea in 2018. BTS are worth more than $4.65 billion to South Korea's economy each year, attracting one in every 13 foreign tourists that visit the country, and are cited as one of the key acts boosting global music sales to $19 billion in 2018, a figure not seen since 2006 after digital purchases gained momentum.</p>
         <p>Following their philanthropic efforts in their Love Myself anti-violence campaign in partnership with UNICEF, BTS addressed the United Nations 73rd General Assembly and became the youngest ever recipients of the Order of Cultural Merit from the President of South Korea due to their contributions in spreading Korean culture and language.</p>
     </article>
+    <!-- Start Members -->
+<section id="Intro">
+    <h2>MEMBERS</h2>
     </section>
-    <article>
-<!-- BIOGRAPHY -->
+
+</section>
+<!-- Members Names -->
 <section id="members">
-        <img src="BTSImages/RM.jpg"></a>
-        <img src="BTSImages/Jin.png"></a>
-        <img src="BTSImages/Suga.jpg"></a>
-        <img src="BTSImages/J-Hope.png"></a>
-        <img src="BTSImages/Jimin.png"></a>
-        <img src="BTSImages/V.jpg"></a>
-        <img src="BTSImages/Jungkook.jpg"></a>
+    <section id="Member1">
+        <img id="RM" src="BTSImages/RM.jpg"><p>Kim Namjoon</p>
+        </section>
+        <section id="Member2">
+        <img id="Jin" src="BTSImages/Jin.png"><p>Kim Seokjin</p>
+        </section>
+        <section id="Member3">
+        <img id="Suga" src="BTSImages/Suga.jpg"><p>Min Yoongi(Yunki)</p>
+        </section>
+        <section id="Member4">
+        <img id="J-Hope" src="BTSImages/J-Hope.png"><p>Jung Hoseok</p>
+        </section>
+        <section id="Member5">
+        <img id="Jimin" src="BTSImages/Jimin.png"><p>Park Jimin</p>
+        </section>
+        <section id="Member6">
+        <img id="V" src="BTSImages/V.jpg"><p>Kim Taehyung</p>
+        </section>
+        <section id="Member7">
+        <img id="JK" src="BTSImages/Jungkook.jpg"><p>Jeon Jungkook(Jeongkook)</p>
     </section>
+</section>
+
+ <!-- Discography    -->
     <section id="Intro">
         <h2>DISCOGRAPHY</h2>
     </section>
     <section id="Album 1">
-         <h2>BUTTER</h2>
-         <p>Released May 5, 2021</p>
+         <p>BUTTER: Released May 5, 2021</p>
          <h2>Track list:</h2>
           <ol>Butter</ol>
           <ol>Butter(Hotter Remix)</ol>
           <ol>Butter(Instrumental)</ol>  
     </section>
     <section id="Album 2">
-        <h2>PERMISSION TO DANCE</h2>
+        <h2>PERMISSION TO DANCE: Release July 9, 2021</h2>
         <ol>Butter</ol>
         <ol>Permission to Dance</ol>
         <ol>Butter(Instrumental)</ol>
         <ol>Permission to Dance(Instrumental)</ol>
     </section>
     <section id="Album 3">
-        <h2>PROOF</h2>           
+        <img src="BTSImages/BTS-Proof.jpg">
+        <h2>PROOF: Released June 10th 2022, </h2>           
         <h3>Disc 1</h3>             
         <ol>Born Singer</ol>
         <ol>No More Dream</ol>
