Completed Band Challenge

--- a/BTS.html
+++ b/BTS.html
@@ -12,9 +12,9 @@
 <header>
         <!--Navigation Start-->
             <nav>
-                <a href="">HOME</a>
-                <a href="">BIOGRAPHY</a>
-                <a href="">DISCOGRAPHY</a>
+                <a href="#Home">HOME</a>
+                <a href="#Intro">BIOGRAPHY</a>
+                <a href="#Discography">DISCOGRAPHY</a>
             </nav>        
     </header>
 <!-- Main -->
@@ -63,28 +63,49 @@
     </section>
 </section>
 
- <!-- Discography    -->
-    <section id="Intro">
-        <h2>DISCOGRAPHY</h2>
+ <!--Discography-->
+    <section id="Discography">
+        <h2>DISCOGRAPHY</h2>    
     </section>
-    <section id="Album 1">
-         <p>BUTTER: Released May 5, 2021</p>
+  <!--Album 1-->
+    <section id="Album-1">
+         <h2>BUTTER: Released May 5th,2021</h2>
+         </section>
+         <section id="Album1-img">
+         <img src="BTSImages/Butter.webp">
+         </section>
          <h2>Track list:</h2>
+         <section id="Track1">
           <ol>Butter</ol>
           <ol>Butter(Hotter Remix)</ol>
-          <ol>Butter(Instrumental)</ol>  
-    </section>
-    <section id="Album 2">
-        <h2>PERMISSION TO DANCE: Release July 9, 2021</h2>
+          <ol>Butter(Instrumental)</ol>
+          </section>  
+    <!-- Album 2-->
+    <section id="Album-2">
+        <h2>PERMISSION TO DANCE: Released July 9th, 2021</h2>
+        </section>
+        <section id="Album2-img">
+        <img src="BTSImages/BTS-PTD.png">
+        </section>
+        <h2>Track list:</h2>
+        <section id="Track2">
         <ol>Butter</ol>
         <ol>Permission to Dance</ol>
         <ol>Butter(Instrumental)</ol>
         <ol>Permission to Dance(Instrumental)</ol>
-    </section>
-    <section id="Album 3">
+        </section>
+
+    <!-- Album 3 -->
+    <section id="Album-3">
+        <h2>PROOF: Released June 10th 2022</h2>
+        </section>
+        <section id="Album3-img"> 
         <img src="BTSImages/BTS-Proof.jpg">
-        <h2>PROOF: Released June 10th 2022, </h2>           
-        <h3>Disc 1</h3>             
+        </section>
+
+        <!-- DISC 1 -->
+        <section id="DISC-1">
+        <h3>Disc 1</h3>                    
         <ol>Born Singer</ol>
         <ol>No More Dream</ol>
         <ol>N.O</ol>
@@ -104,7 +125,10 @@
         <ol>Life Goes On</ol>
         <ol>Butter</ol>
         <ol>Yet to Come</ol>
-        <br>
+        </section>
+
+        <!-- DISC 2 -->
+        <section id="DISC-2">
         <h3>Disc Two</h3>
         <ol>RUN BTS</ol>
         <ol>Intro:Persona</ol>
@@ -121,7 +145,10 @@
         <ol>00:00 (Zero O'Clock)</ol>
         <ol>Euphoria</ol>
         <ol>Dimple</ol>
-        <br>
+        </section>
+
+        <!-- DISC 3 -->
+        <section id="DISC-3">
         <h3>Disc Three</h3>
         <ol>Jump (Demo version)</ol>
         <ol>Young Love</ol>
@@ -137,7 +164,8 @@
         <ol>Seesaw(demo version)</ol>
         <ol>Still with you (Jungkook acapella)</ol>
         <ol>For Youth</ol>
-        </section>      
+</section>
+</section>      
 </body>
 <a href="" class="button btn-purple">Back To Top</a> 
 <!-- Copyright -->
