added members stage names

--- a/BTS.html
+++ b/BTS.html
@@ -41,25 +41,25 @@
 <!-- Members Names -->
 <section id="members">
     <section id="Member1">
-        <img id="RM" src="BTSImages/RM.jpg"><p>Kim Namjoon</p>
+        <img id="RM" src="BTSImages/RM.jpg"><p>Kim Namjoon(RM)</p>
         </section>
         <section id="Member2">
-        <img id="Jin" src="BTSImages/Jin.png"><p>Kim Seokjin</p>
+        <img id="Jin" src="BTSImages/Jin.png"><p>Kim Seokjin(Jin)</p>
         </section>
         <section id="Member3">
-        <img id="Suga" src="BTSImages/Suga.jpg"><p>Min Yoongi(Yunki)</p>
+        <img id="Suga" src="BTSImages/Suga.jpg"><p>Min Yoongi(Yunki/Suga)</p>
         </section>
         <section id="Member4">
-        <img id="J-Hope" src="BTSImages/J-Hope.png"><p>Jung Hoseok</p>
+        <img id="J-Hope" src="BTSImages/J-Hope.png"><p>Jung Hoseok (J-Hope)</p>
         </section>
         <section id="Member5">
-        <img id="Jimin" src="BTSImages/Jimin.png"><p>Park Jimin</p>
+        <img id="Jimin" src="BTSImages/Jimin.png"><p>Park Jimin (Jimin)</p>
         </section>
         <section id="Member6">
-        <img id="V" src="BTSImages/V.jpg"><p>Kim Taehyung</p>
+        <img id="V" src="BTSImages/V.jpg"><p>Kim Taehyung (V)</p>
         </section>
         <section id="Member7">
-        <img id="JK" src="BTSImages/Jungkook.jpg"><p>Jeon Jungkook(Jeongkook)</p>
+        <img id="JK" src="BTSImages/Jungkook.jpg"><p>Jeon Jungkook(Jeongkook or JK)</p>
     </section>
 </section>
 
